--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "cms-clean": "agility-next clean"
   },
   "dependencies": {
-    "next": "^11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
-    "@agility/content-fetch": "^1.1.1",
+    "@agility/content-fetch": "^1.1.2",
     "@agility/content-sync": "^1.0.3",
     "@agility/nextjs": "^0.4.1",
     "@tailwindcss/typography": "^0.4.1",
